@@ -253,7 +253,9 @@ pcap_handler find_handler(int datalink_type, const char *device)
 	      datalink_type, device);
 
     for (i = 0; handlers[i].handler != NULL; i++){
-	if (handlers[i].type == datalink_type) return handlers[i].handler;
+	if (handlers[i].type == datalink_type){
+            return handlers[i].handler;
+        }
     }
 
     die("sorry - unknown datalink type %d on interface %s", datalink_type, device);
