@@ -48,7 +48,9 @@ void  scan_netviz(const class scanner_params &sp,const recursion_control_block &
     if(sp.phase==scanner_params::startup){
 #ifdef HAVE_LIBCAIRO
 	sp.info->name  = "netviz";
-	sp.info->flags = scanner_info::SCANNER_DISABLED;
+	//sp.info->flags = scanner_info::SCANNER_DISABLED;
+        // scan_netviz is now enabled by default
+        sp.info->flags = 0;
 	sp.info->author= "Mike Shick";
 	sp.info->packet_user = 0;
 	sp.info->packet_cb = th_process_packet;
